# github-big-proj18

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  self-check.sh  tsconfig.json  vitest.config.ts
aegisflow/: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  docker-compose.yml
aegisflow/.github/workflows/: ci.yml
aegisflow/backend/: Dockerfile  config.yaml  pyproject.toml  pytest.ini
aegisflow/backend/.pytest_cache/v/cache/: lastfailed  nodeids
aegisflow/backend/src/aegisflow/: __init__.py  main.py
aegisflow/backend/src/aegisflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aegisflow/backend/src/aegisflow/api/: __init__.py  server.py  websocket.py
aegisflow/backend/src/aegisflow/audit/: __init__.py  record.py  storage.py  trail.py
aegisflow/backend/src/aegisflow/budget/: __init__.py  guard.py  throttle.py  token_counter.py
aegisflow/backend/src/aegisflow/compress/: __init__.py  cache_aligner.py  ccr.py  compressor.py  router.py
aegisflow/backend/src/aegisflow/core/: __init__.py  config.py  context.py  orchestrator.py
aegisflow/backend/src/aegisflow/human_loop/: __init__.py  approval.py  gateway.py  queue.py
aegisflow/backend/src/aegisflow/policy/: __init__.py  engine.py  loader.py  schema.py
aegisflow/backend/src/aegisflow/sandbox/: __init__.py  executor.py  process_isolator.py  vfs.py
aegisflow/backend/tests/: test_api.py  test_core.py
aegisflow/examples/: usage.py
aegisflow/frontend/: Dockerfile  package.json
docs/: API.md  PLUGIN_DEVELOPMENT.md
(+5 files in other folders)
