[build-system]
requires=["setuptools>=68.0","wheel"]
build-backend="setuptools.build_meta"

[project]
name="aegisflow"
version="0.1.0"
description="Enterprise AI Agent Runtime Governance Platform"
readme="README.md"
requires-python=">=3.10"
license={text="MIT"}
authors=[{name="lanekingkong"}]
keywords=["ai-agent","governance","runtime","security","cost-control","sandbox","audit"]

dependencies=[
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev=[
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.3",
]

[project.scripts]
aegisflow="aegisflow.main:main"

[tool.setuptools.packages.find]
where=["src"]

[tool.pytest.ini_options]
asyncio_mode="auto"
testpaths=["tests"]
